--- a/elide-spring/elide-spring-boot-autoconfigure/src/test/resources/application.yaml
+++ b/elide-spring/elide-spring-boot-autoconfigure/src/test/resources/application.yaml
@@ -16,6 +16,11 @@ elide:
   api-docs:
     path: /doc
     enabled: true
+  api-versioning-strategy:
+    header:
+      enabled: true
+      header-name:
+      - ApiVersion
   async:
     enabled: true
     thread-pool-size: 7
