--- a/elide-core/pom.xml
+++ b/elide-core/pom.xml
@@ -182,6 +182,11 @@
             <artifactId>jersey-container-servlet</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
