--- a/elide-datastore/pom.xml
+++ b/elide-datastore/pom.xml
@@ -101,7 +101,7 @@
                 <plugin>
                     <groupId>org.codehaus.mojo</groupId>
                     <artifactId>build-helper-maven-plugin</artifactId>
-                    <version>3.4.0</version>
+                    <version>${build-helper-maven-plugin.version}</version>
                     <executions>
                         <execution>
                             <id>add-source-generate-sources</id>
