--- a/elide-core/src/main/resources/META-INF/native-image/com.yahoo.elide/elide-core/reflect-config.json
+++ b/elide-core/src/main/resources/META-INF/native-image/com.yahoo.elide/elide-core/reflect-config.json
@@ -184,6 +184,14 @@
     "allPublicClasses" : true
   },
   {
+    "name": "com.yahoo.elide.core.utils.coerce.converters.ZonedDateTimeSerde",
+    "allDeclaredConstructors" : true,
+    "allDeclaredMethods" : true,
+    "allPublicMethods" : true,
+    "allDeclaredClasses" : true,
+    "allPublicClasses" : true
+  },
+  {
     "name": "com.yahoo.elide.jsonapi.models.Data",
     "allDeclaredFields": true,
     "allDeclaredMethods": true,
