Migrate json schema validator

--- a/elide-model-config/pom.xml
+++ b/elide-model-config/pom.xml
@@ -94,7 +94,7 @@
         </dependency>
 
         <dependency>
-            <groupId>com.github.java-json-tools</groupId>
+            <groupId>com.networknt</groupId>
             <artifactId>json-schema-validator</artifactId>
         </dependency>
         <dependency>
