--- a/pom.xml
+++ b/pom.xml
@@ -122,7 +122,7 @@
         <jedis.version>5.1.0</jedis.version>
         <jsonassert.version>1.5.1</jsonassert.version>
         <json-path.version>2.9.0</json-path.version>
-        <json-schema-validator.version>2.2.14</json-schema-validator.version>
+        <json-schema-validator.version>1.0.88</json-schema-validator.version>
         <junit.version>5.10.1</junit.version>
         <logback.version>1.4.14</logback.version>
         <lombok.version>1.18.30</lombok.version>
@@ -454,7 +454,7 @@
                 <version>${json-path.version}</version>
             </dependency>
             <dependency>
-                <groupId>com.github.java-json-tools</groupId>
+                <groupId>com.networknt</groupId>
                 <artifactId>json-schema-validator</artifactId>
                 <version>${json-schema-validator.version}</version>
             </dependency>
