Add tests and java docs

--- a/elide-core/src/main/resources/META-INF/native-image/com.yahoo.elide/elide-core/native-image.properties
+++ b/elide-core/src/main/resources/META-INF/native-image/com.yahoo.elide/elide-core/native-image.properties
@@ -1,5 +1,6 @@
 Args = -H:ReflectionConfigurationResources=${.}/reflect-config.json \
        -H:ResourceConfigurationResources=${.}/resource-config.json \
+       --initialize-at-build-time=com.yahoo.elide.ElideModules \
        --initialize-at-build-time=com.yahoo.elide.core.utils.ClassScannerCache \
        --initialize-at-build-time=io.github.classgraph \
        --initialize-at-build-time=nonapi.io.github.classgraph \
