--- a/elide-graphql/pom.xml
+++ b/elide-graphql/pom.xml
@@ -144,6 +144,11 @@
             <artifactId>jsonassert</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <scope>test</scope>
+        </dependency> 
     </dependencies>
 
     <build>
