--- a/pom.xml
+++ b/pom.xml
@@ -125,7 +125,7 @@
         <javaassist.version>3.29.2-GA</javaassist.version>
         <jansi.version>2.4.0</jansi.version>
         <jersey.version>3.1.3</jersey.version>
-        <jetty.version>11.0.15</jetty.version>
+        <jetty.version>12.0.3</jetty.version>
         <jedis.version>4.4.1</jedis.version>
         <jsonassert.version>1.5.1</jsonassert.version>
         <json2flat.version>1.0.3</json2flat.version>
@@ -433,10 +433,17 @@
                 <artifactId>jansi</artifactId>
                 <version>${jansi.version}</version>
             </dependency>
-            
+
             <dependency>
                 <groupId>org.eclipse.jetty</groupId>
                 <artifactId>jetty-bom</artifactId>
+                <version>${jetty.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.eclipse.jetty.ee10</groupId>
+                <artifactId>jetty-ee10-bom</artifactId>
                 <version>${jetty.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
