--- a/elide-graphql/src/main/resources/META-INF/native-image/com.yahoo.elide/elide-graphql/native-image.properties
+++ b/elide-graphql/src/main/resources/META-INF/native-image/com.yahoo.elide/elide-graphql/native-image.properties
@@ -1,1 +1,2 @@
-Args = -H:ReflectionConfigurationResources=${.}/reflect-config.json
+Args = -H:ReflectionConfigurationResources=${.}/reflect-config.json \
+       -H:ResourceConfigurationResources=${.}/resource-config.json
