Exclude commons logging

--- a/elide-integration-tests/pom.xml
+++ b/elide-integration-tests/pom.xml
@@ -125,6 +125,11 @@
             <artifactId>logback-core</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>jcl-over-slf4j</artifactId>
+            <scope>test</scope>
+        </dependency>
 
         <dependency>
             <groupId>org.junit.jupiter</groupId>
