--- a/elide-async/pom.xml
+++ b/elide-async/pom.xml
@@ -85,6 +85,20 @@
         <dependency>
             <groupId>redis.clients</groupId>
             <artifactId>jedis</artifactId>
+            <!-- Redis result storage engine is not used by default -->
+            <optional>true</optional>
+            <exclusions>
+                <!-- JSON commands not used -->
+                <exclusion>
+                    <groupId>com.google.code.gson</groupId>
+                    <artifactId>gson</artifactId>
+                </exclusion>
+                <!-- JSON commands not used -->
+                <exclusion>
+                    <groupId>org.json</groupId>
+                    <artifactId>json</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <!-- Test -->
