--- a/pom.xml
+++ b/pom.xml
@@ -90,8 +90,9 @@
         <classgraph.version>4.8.165</classgraph.version>
         <commons-beanutils.version>1.9.4</commons-beanutils.version>
         <commons-cli.version>1.6.0</commons-cli.version>
+        <commons-codec.version>1.16.1</commons-codec.version>
         <commons-collections4.version>4.4</commons-collections4.version>
-        <commons-compress.version>1.25.0</commons-compress.version>
+        <commons-compress.version>1.26.0</commons-compress.version>
         <commons-lang3.version>3.14.0</commons-lang3.version>
         <embedded-redis.version>0.11.0</embedded-redis.version>
         <encoder.version>1.2.3</encoder.version>
@@ -249,11 +250,6 @@
                 <groupId>commons-cli</groupId>
                 <artifactId>commons-cli</artifactId>
                 <version>${commons-cli.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.apache.commons</groupId>
-                <artifactId>commons-compress</artifactId>
-                <version>${commons-compress.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.github.codemonstur</groupId>
