--- a/pom.xml
+++ b/pom.xml
@@ -91,7 +91,7 @@
         <commons-collections4.version>4.4</commons-collections4.version>
         <commons-compress.version>1.26.2</commons-compress.version>
         <commons-lang3.version>3.14.0</commons-lang3.version>
-        <embedded-redis.version>0.11.0</embedded-redis.version>
+        <embedded-redis.version>1.4.3</embedded-redis.version>
         <encoder.version>1.2.3</encoder.version>
         <federation-graphql-java-support-api.version>5.1.0</federation-graphql-java-support-api.version>
         <graphql-java.version>22.0</graphql-java.version>
@@ -129,10 +129,10 @@
         <reactor-bom.version>2023.0.6</reactor-bom.version>
         <rsql-parser.version>2.1.0</rsql-parser.version>
         <slf4j.version>2.0.17</slf4j.version>
-        <spring-boot.version>3.4.1</spring-boot.version>
-        <spring-framework.version>6.1.10</spring-framework.version>
-        <spring-cloud-commons.version>4.1.4</spring-cloud-commons.version>
-        <springdoc.version>2.8.5</springdoc.version>
+        <spring-boot.version>4.0.0-RC2</spring-boot.version>
+        <spring-framework.version>7.0.1</spring-framework.version>
+        <spring-cloud-commons.version>5.0.0-RC1</spring-cloud-commons.version>
+        <springdoc.version>3.0.0-RC1</springdoc.version>
         <swagger-api.version>2.2.29</swagger-api.version>
         <system-lambda.version>1.2.1</system-lambda.version>
         <tomcat.version>11.0.6</tomcat.version>
